# sc_inetbox_adapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/sc_inetbox_adapter/: __init__.py  const.py  sc_inetbox_adapter.py
tests/: conftest.py  test_sc_inetbox_adapter.py  virtual_inetbox.py
