[tool.poetry]
name = "sc_inetbox_adapter"
version = "0.1.0"
description = "API adapter for Swisscom Internet Box"
authors = ["Matthias Weis"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
